--- a/index.html
+++ b/index.html
@@ -10,22 +10,105 @@
 </head>
 <body>
  <header>
-    <h1 class="logo">Logo</h1>
+     <div class = "banner">
+        <div class="logo">DI</div>
+        <h1 class="letterhead">debo isola</h1>
+     </div>
+    
     <input type="checkbox" id = "nav-toggle" class = "nav-toggle">
     <label class="nav-toggle-label" for="nav-toggle">
-        <span class="material-icons">
-            menu
-        </span>
+        <span></span>
     </label>
     <nav>
         <ul>
             <li class="nav-link"><a href="#">Home</a></li>
-            <li class="nav-link"><a href="#">About</a></li>
-            <li class="nav-link"><a href="#">Contact Me</a></li>
+            <li class="nav-link"><a href="#about">About</a></li>
+            <li class="nav-link"><a href="#contact">Contact Me</a></li>
             <li class="nav-link"><a href="#" target="_blank">Blog</a></li>
         </ul>
-
     </nav>
- </header>   
+ </header>  
+ <main>
+     <section class = "hero-section">    
+        <div class="hero-text">
+            <h2>Hi I'm debo</h2>
+            <p>And I am a web developer</p>
+        </div>
+    </section>
+    <section id="about" class="about">
+        <h3>about</h3>
+        <div class ="about-container">
+        <div class="about-me"> 
+            <img class="my-picture-style" src="https://unsplash.it/705/705" width="240px" height="240px" alt="">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam vitae sit, 
+                veritatis nisi dignissimos quae laboriosam beatae inventore ex cumque eum 
+                porro esse voluptas corrupti iure aliquam autem nulla explicabo repudiandae 
+                repellendus natus accusantium fugiat facere quis! Minus, obcaecati aut cumque, nisi reprehenderit 
+                ducimus ullam molestiae inventore adipisci, dolore quos laboriosam officiis! Aliquid numquam saepe 
+                reprehenderit sit. Quis deserunt dolores quaerat, praesentium ipsam aspernatur ratione blanditiis 
+                veritatis debitis officiis quae tempore, cupiditate, libero harum at. Ab explicabo est culpa expedita ea dolores, 
+                in fugit velit officia recusandae eligendi accusantium, sequi veniam maiores adipisci dolore? Harum est ducimus 
+                dolore mollitia nesciunt distinctio fugiat. Delectus sed at veritatis ut in, ipsam facere 
+                ratione deleniti dolorem labore tempore assumenda eligendi dolores beatae repellat. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Quaerat velit excepturi nesciunt, reprehenderit repellendus quas similique vero amet accusamus itaque dignissimos sequi blanditiis ipsa.
+                Minus aliquid ducimus enim accusamus cum vero obcaecati sapiente rem odit, 
+                facere voluptas autem eveniet voluptatem dolore temporibus numquam magni illo qui asperiores nulla in voluptatum?</p>
+        </div>
+       <div class="skills">
+        <h4>Skills</h4>   
+        <ul>
+           <li>html</li>
+           <li>CSS</li>
+           <li>JavaScript</li>
+           <li>React</li>
+           <li>bootStrap</li>
+        </ul></div>
+        </div>
+    </section>
+    <section class="projects">
+        <h3>Projects</h3>
+        <div class="container">
+            <div class="projects-tile">
+                <img class ="project-image" src="images/goober_screenshot.png" alt="">
+                <p class="project-text">Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="projects-tile">
+                <img class="project-image" src="images/nerd_screenshot.png" alt="">
+                <p class="project-text">Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="projects-tile">
+                <img class ="project-image" src="images/form.png" alt="">
+                <p class="project-text"></p>
+            </div>
+            <div class="projects-tile">
+                <img class ="project-image" src="images/landing.png" alt="">
+                <p class="project-text"></p>  ></form>
+            </div>
+            <div class="projects-tile">
+                <img class ="project-image" src="images/trombones.png" alt="">
+                <p class="project-text"></p>
+            </div>
+            <div class="projects-tile">
+                <img src="" alt="">
+                <p class="project-text"></p>
+            </div>
+        </div>
+    </section>
+    <section id ="contact" class = "hire-me-section">    
+        <h3 class="hire-me">Hire Me</h3>
+        <form class="block" action="#">
+                <p><label for="txtName"> Name:&nbsp;&nbsp;<input id ="txtName"type="text"></label></p>
+                <p><label for="email">Phone:&nbsp;&nbsp;<input type="email"></label></p>
+                <p><label for="tel">Tel:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="tel"></label> </p>   
+                <p><label for="txtar">Please enter your request<textarea name="contact-entry" id="" cols="80" rows="10"></textarea></label></p>
+        </form>
+    </section>
+
+  
+</main> 
+<footer>
+    <p>About me</p>
+    <div class="social-links">Connect with me on: facebook linkedin</div>
+</footer>
 </body>
 </html>
