Changes to mobile layout, altered navbar and fixed projects grid

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <ul>
             <li class="nav-link"><a href="#">Home</a></li>
             <li class="nav-link"><a href="#about">About</a></li>
+            <li class="nav-link"><a href="#projects">Projects</a></li>
             <li class="nav-link"><a href="#contact">Contact Me</a></li>
+            
             <li class="nav-link"><a href="#" target="_blank">Blog</a></li>
         </ul>
     </nav>
@@ -65,7 +67,7 @@
         </ul></div>
         </div>
     </section>
-    <section class="projects">
+    <section id="projects" class="projects">
         <h3>Projects</h3>
         <div class="container">
             <div class="projects-tile">
@@ -82,7 +84,7 @@
             </div>
             <div class="projects-tile">
                 <img class ="project-image" src="images/landing.png" alt="">
-                <p class="project-text"></p>  ></form>
+                <p class="project-text"></p></form>
             </div>
             <div class="projects-tile">
                 <img class ="project-image" src="images/trombones.png" alt="">
@@ -100,7 +102,8 @@
                 <p><label for="txtName"> Name:&nbsp;&nbsp;<input id ="txtName"type="text"></label></p>
                 <p><label for="email">Phone:&nbsp;&nbsp;<input type="email"></label></p>
                 <p><label for="tel">Tel:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="tel"></label> </p>   
-                <p><label for="txtar">Please enter your request<textarea name="contact-entry" id="" cols="80" rows="10"></textarea></label></p>
+                <p><label for="txtar">Please enter your request</label></p>
+                <p><textarea name="contact-entry" id="" cols="50" rows="10"></textarea></p>
         </form>
     </section>
 
